--- a/-- clean/Avira/Avira 1/index.html
+++ b/-- clean/Avira/Avira 1/index.html
@@ -14,18 +14,18 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&amp;display=swap"
 		rel="stylesheet">
-	<script src="c6b1725a3c7db78273eeed86b7600a2c.static.js"></script>
-	<link href="8dcc1d5df036ede9a98e779763fed639.static.css" media="all" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="f8b01359e933b40f34eb1c65113b4e1f.static.css">
-	<script src="df5c4a2b51cc1ae1884b8de285c6aa63.static.js"></script>
-	<script src="3b81f7063987feec395640c380ab08a1.static.js"></script>
-	<script src="a986f67481b4c04b140758825e86d28e.static.js"></script>
+	<script src="js/c6b1725a3c7db78273eeed86b7600a2c.static.js"></script>
+	<link href="js/8dcc1d5df036ede9a98e779763fed639.static.css" media="all" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/f8b01359e933b40f34eb1c65113b4e1f.static.css">
+	<script src="js/df5c4a2b51cc1ae1884b8de285c6aa63.static.js"></script>
+	<script src="js/3b81f7063987feec395640c380ab08a1.static.js"></script>
+	<script src="js/a986f67481b4c04b140758825e86d28e.static.js"></script>
 	<script type="text/javascript" async=""
 		src="33720a9886c013a58f4d8b4210684b2d.static.js?cb=googleTranslateElementInit"></script>
-	<script src="25ee284ab5d2d601c6d1ecf1a505b513.static.js"></script>
-	<link type="text/css" rel="stylesheet" charset="UTF-8" href="31aa060f9feff2c80c0d35d3c3b77e7d.static.css">
-	<script type="text/javascript" charset="UTF-8" src="080273aed7cc312cc769fb65b8556565.static.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css">
+	<script src="js/25ee284ab5d2d601c6d1ecf1a505b513.static.js"></script>
+	<link type="text/css" rel="stylesheet" charset="UTF-8" href="css/31aa060f9feff2c80c0d35d3c3b77e7d.static.css">
+	<script type="text/javascript" charset="UTF-8" src="js/080273aed7cc312cc769fb65b8556565.static.js"></script>
+	<link rel="stylesheet" href="css/https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css">
 </head>
 
 <body class="browserStack etc">
@@ -34,7 +34,7 @@
 	<header>
 
 		<section class="wrapper">
-			<img src="4733599af88cfdbf69875b5a159e1eff.static.png">
+			<img src="img/4733599af88cfdbf69875b5a159e1eff.static.png">
 		</section>
 	</header>
 
@@ -53,12 +53,12 @@
 	<section class="firtest" style="opacity: 1;">
 
 		<section class="head">
-			<img src="86da1177b691a27c03f6ba24e5534d1d.static.png">
+			<img src="img/86da1177b691a27c03f6ba24e5534d1d.static.png">
 			Avira Antivirus
 
 			<span class="icons">
-				<img src="9d8299722b5c1b6c4032c3d34ac74d95.static.png">
-				<img src="096f303827ed3b21e45526a63fb05f97.static.png">
+				<img src="img/9d8299722b5c1b6c4032c3d34ac74d95.static.png">
+				<img src="img/096f303827ed3b21e45526a63fb05f97.static.png">
 			</span>
 		</section>
 
@@ -208,14 +208,14 @@
 			</section>
 		</section>
 
-		<img class="tog" src="50fd30a4064ac26655704beb7c4e9764.static.png">
+		<img class="tog" src="img/50fd30a4064ac26655704beb7c4e9764.static.png">
 
 	</section>
 
 
 	<section class="latest">
 		<section class="head">
-			<img src="d564f07a4b609125280e8d9a54a3c224.static.png">
+			<img src="img/d564f07a4b609125280e8d9a54a3c224.static.png">
 
 			Your <span class="device">PC</span> is infected with 18 viruses!
 
